# MacOSPlugz

./: A.h  AEConfig.h  AE_Effect.h  AE_EffectCB.h  AE_Macros.h  CMakeLists.txt  PunkDither.cpp  PunkDither.h  PunkDitherPiPL.r  PunkDither_Strings.cpp  README.md
.github/workflows/: macos-build.yml
Debug/: LeanSynth.aex.recipe  LeanSynth.lib  LeanSynthPiPL.rr  LeanSynthPiPL.rrc  PunkDither.aex.recipe  PunkDither.exp  PunkDither.lib  PunkDitherPiPL.res  PunkDitherPiPL.rr  PunkDitherPiPL.rrc
Debug/LeanSynth.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  LeanSynth.lastbuildstate
Debug/PunkDither.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  bscmake.command.1.tlog  bscmake.read.1.tlog  bscmake.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
SP/: SPAdapts.h  SPBlocks.h  SPConfig.h  SPFiles.h  SPPiPL.h  SPProps.h  SPRuntme.h  SPTypes.h
